Add SASS support

--- a/react-app/src/components/Layout/Layout.scss
+++ b/react-app/src/components/Layout/Layout.scss
@@ -29,7 +29,7 @@
   }
 
   .card-body {
-    font-size: small;
+    font-size: medium;
 
   }
 
@@ -57,7 +57,7 @@
   }
 
   .table {
-    font-size: small;
+    font-size: medium;
   }
 
  #destination, #add-item, placeholder{
